...
        android:contentDescription="go back to previous page"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/uploadHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload an Event Poster (Image File):"
        android:layout_below="@+id/headerTitle"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/uploadHeader"
        android:layout_marginTop="10dp"
        android:scaleType="center"
        android:src="@drawable/image_placeholder_background" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster"
        android:layout_marginTop="10dp"
        android:backgroundTint="#8E8E93"
        android:text="Upload"
...
        android:layout_below="@+id/uploadButton"
        android:layout_marginTop="20dp"
        android:text="QR CODE: *"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
        android:id="@+id/generateNewQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qrCodeHeader"
        android:text="Generate New QR Code"/>

    <CheckBox
...
        android:layout_height="wrap_content"
        android:layout_below="@+id/qrCodeSpinner"
        android:layout_marginTop="10dp"
        android:text="Promotion QR Code:"/>

    <CheckBox
        android:id="@+id/generatePromotionQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promotionQRCodeHeader"
        android:text="Generate a Promotion QR Code"/>

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generatePromotionQRCode"
        android:layout_marginTop="20dp"
        android:text="CREATE EVENT"
        android:backgroundTint="@color/amber"
...
